@@ -11,11 +11,18 @@ INCLUDE_DIRECTORIES(${OPENJPEG_SOURCE_DIR}/libopenjpeg
 # First thing define the common source:
 SET(comparePGXimages_SRCS comparePGXimages.c ${OPENJPEG_SOURCE_DIR}/applications/codec/convert.c)
 
+SET(compare_dump_files_SRCS compare_dump_files.c)
+
 # If not getopt was found then add it to the exe:
 IF(DONT_HAVE_GETOPT)
   message("dont have getopt, we will add it")
   SET(comparePGXimages_SRCS
     ${comparePGXimages_SRCS}
+    ${OPENJPEG_SOURCE_DIR}/applications/common/getopt.c
+  )
+  
+  SET(compare_dump_files_SRCS
+    ${compare_dump_files_SRCS}
     ${OPENJPEG_SOURCE_DIR}/applications/common/getopt.c
   )
 ENDIF(DONT_HAVE_GETOPT)
@@ -26,6 +33,8 @@ TARGET_LINK_LIBRARIES(comparePGXimages ${OPENJPEG_LIBRARY_NAME}
                                        ${PNG_LIBNAME}
                                        ${TIFF_LIBNAME}
                                        )
+                                       
+ADD_EXECUTABLE(compare_dump_files ${compare_dump_files_SRCS})
 
 # No image send to the dashboard if lib PNG is not available.
 IF(NOT HAVE_LIBPNG)
